my-material-tab-changes

--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -67,7 +67,7 @@
               <div class="row">
                 <div class="col-xs-1 p-t-5">
                   <a href="javascript:void(0)" *ngIf="addMyMaterial.get('myMaterial').value.length > 1" class="width-15-px cursor-pointer" (click)="onDelete(i)">
-                    <img src="../../../../assets/images/delete-button.png/" />
+                    <img src="../../../../assets/images/delete-button.png" />
                   </a>
                 </div>
                 <div class="col-xs-1">
