--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -3,13 +3,13 @@
     <div #myele *ngIf="!isSearching ? true : !category.allNull">
       <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel mat-expansion-panel-header-not-expand mat-expansion-panel-header-wrapper bom-qty-page" [expanded]="true">
         <mat-expansion-panel-header class="background-color-skyblue row">
-          <div class="col-xs-6 text-left">
-            <mat-panel-title>
-              Category Name
+          <div class="col-xs-6 text-left p-l-25">
+            <mat-panel-title class="color-white">
+              {{ category.groupName }}
             </mat-panel-title>
           </div>
           <div class="col-xs-3 text-left">
-            <mat-panel-title>
+            <mat-panel-title class="color-white">
               Unit
             </mat-panel-title>
           </div>
@@ -21,8 +21,8 @@
               <span class="pull-left p-l-40 p-t-5">{{ subcategory.materialName }}</span>
             </div>
             <div class="col-xs-3 p-t-10">
-              <span class="text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
-                <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== subcategory.tradeList.length - 1">,</span> </span>
+              <span class="text-semi-bold">
+                <span class="p-r-5">{{ subcategory.tradeName }}</span>
               </span>
             </div>
             <div class="col-xs-3 text-left p-t-5">
