--- a/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
+++ b/src/app/features/my-material/unapproved-materials-tab/unapprovedMaterialTab.component.html
@@ -3,13 +3,13 @@
     <div #myele *ngIf="!isSearching ? true : !category.allNull">
       <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel bom-qty-page mat-expansion-panel-header-wrapper" [expanded]="true">
         <mat-expansion-panel-header class="background-color-skyblue row">
-          <div class="col-xs-6 text-left">
-            <mat-panel-title>
-              Category Name
+          <div class="col-xs-6 text-left p-l-25">
+            <mat-panel-title class="color-white">
+              {{ category.groupName }}
             </mat-panel-title>
           </div>
           <div class="col-xs-3 text-left">
-            <mat-panel-title>
+            <mat-panel-title class="color-white">
               Unit
             </mat-panel-title>
           </div>
