--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @import "./pages/forget-pass.scss";
 @import "./layout/loader.scss";
 @import "./pages/indent.scss";
+@import "./pages/release-notes.scss";
 // @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
 @import "./pages/select-project.scss";
 @import "./pages/walkthrough.scss";
