my-material-tab-changes

--- a/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
+++ b/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
@@ -7,21 +7,21 @@
             <mat-expansion-panel class="m-b-5 m-t-5 bom-qty-page border-radius-panel mat-expansion-panel-header-wrapper" [expanded]="true">
               <mat-expansion-panel-header class="background-color-skyblue row">
                 <div class="col-xs-6">
-                  <mat-panel-title class="pull-left">
+                  <mat-panel-title class="pull-left color-white">
                     {{ category.groupName }}
                   </mat-panel-title>
                 </div>
-                <div class="col-xs-2 p-r-30">
+                <div class="col-xs-2 p-r-30 color-white">
                   <span class="pull-right">
                     Unit
                   </span>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-2 color-white">
                   <span class="pull-right">
                     Estimated Quantity
                   </span>
                 </div>
-                <div class="col-xs-2">
+                <div class="col-xs-2 color-white">
                   <span class="pull-right">
                     Estimated Rate(₹)
                   </span>
