--- a/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -7,22 +7,22 @@
             <mat-expansion-panel class="m-b-5 m-t-5 border-radius-panel bom-qty-page mat-expansion-panel-header-wrapper" [expanded]="true">
               <mat-expansion-panel-header class="background-color-skyblue row">
                 <div class="col-xs-6">
-                  <mat-panel-title class="pull-left">
+                  <mat-panel-title class="pull-left color-white">
                     {{ category.groupName }}
                   </mat-panel-title>
                 </div>
-                <div class="col-xs-2 p-r-30">
+                <div class="col-xs-2 p-r-30 color-white">
                   <span class="pull-right">
                     Unit
                   </span>
                 </div>
                 <div class="col-xs-2">
-                  <span class="pull-right">
+                  <span class="pull-right color-white">
                     Estimated Quantity
                   </span>
                 </div>
                 <div class="col-xs-2">
-                  <span class="pull-right">
+                  <span class="pull-right color-white">
                     Estimated Rate(₹)
                   </span>
                 </div>
