--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -33,11 +33,11 @@
                 edit
               </button>
             </div>
-            <!-- <div class="col-xs-1 p-t-5">
-              <a href="javascript:void(0)" class="width-15-px cursor-pointer" (click)="onDelete(i)">
+            <div class="col-xs-1 p-t-5">
+              <a href="javascript:void(0)" class="width-15-px cursor-pointer" (click)="onDelete(c, sc)">
                 <img src="../../../../assets/images/delete-button.png/" />
               </a>
-            </div> -->
+            </div>
           </div>
         </div>
       </mat-expansion-panel>
