Post API integrated and tested Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -16,7 +16,7 @@
                         <img class="image-project-card" *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
                      </div>
                     </div>
-                    <div class="col-xs-9">
+                    <div class="col-xs-9 p-l-25">
                        <div class="text-bold">
                          <span class="main-color card-project-name" href="javascript:void(0)">{{ projectDetails.projectName }}</span>
                         </div>
