my-material-tab-changes

--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -36,7 +36,7 @@
             View Indent
           </button>
         </span> -->
-        <span *ngIf="this.permissionObj.rfqFlag">
+        <span>
           <button mat-raised-button class="main-background-color main-button color-white pull-right" (click)="addMaterial()">
             Add/Edit Material
           </button>
