--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -25,7 +25,7 @@
 
         <mat-tab-group (selectedTabChange)="tabClick($event)">
           <mat-tab label="My Materials"> <app-my-material-tab *ngIf="showMyMaterial"></app-my-material-tab></mat-tab>
-          <mat-tab label="Unapproved My Materials"><app-unapproved-material-tab *ngIf="showUnapprovedMaterial"></app-unapproved-material-tab></mat-tab>
+          <!-- <mat-tab label="Unapproved My Materials"><app-unapproved-material-tab *ngIf="showUnapprovedMaterial"></app-unapproved-material-tab></mat-tab> -->
         </mat-tab-group>
       </mat-card>
     </div>
