--- a/src/app/features/bom/bom-allMaterial/bom-allMaterial.component.html
+++ b/src/app/features/bom/bom-allMaterial/bom-allMaterial.component.html
@@ -42,13 +42,11 @@
                       <span
                         *ngIf="
                           (subcategory.requestedQuantity === 0 || subcategory.requestedQuantity === null) &&
-                            (subcategory.availableStock === 0 || subcategory.availableStock === null) &&
                             (subcategory.issueToProject === 0 || subcategory.issueToProject === null);
                           else elseBlock
                         "
-                        formControlName="materialUnit"
                       >
-                        <mat-form-field class="border-select shortWidth mat-form-field-flex-top-padding">
+                        <mat-form-field class="border-select shortWidth mat-form-field-padding mat-form-field-flex-mm-padding">
                           <mat-select formControlName="materialUnit" placeholder="Unit">
                             <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                               <span>
