my-material-tab-changes

--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -29,7 +29,7 @@
               <span>{{ subcategory.materialUnit }}</span>
             </div>
             <div class="col-xs-1 text-right p-t-5">
-              <button class="material-icons cursor button-background main-color" matTooltip="edit" (click)="openEditDialog(c, sc)">
+              <button class="material-icons cursor button-background main-color" matTooltip="Edit" (click)="openEditDialog(c, sc)">
                 edit
               </button>
             </div>
