--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -3,7 +3,7 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12">
-        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product"></card-layout>
+        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" (startDate)="startDate($event)" [projectDetails]="product"></card-layout>
       </div>
     </div>
     <div class="row p-t-10 p-b-10">
@@ -70,7 +70,7 @@
                   [matDatepicker]="startDate"
                   placeholder="Required Date"
                   (dateChange)="getStart(ref.value, i)"
-                  [min]="minDate"
+                  [min]="startDateOfProject"
                   (click)="startDate.open()"
                   readonly
                 />
