View Details aligned left Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/card-layout.scss
+++ b/src/assets/scss/pages/card-layout.scss
@@ -85,7 +85,8 @@
             display: block;
             color: #f47721;
             font-size: 12px;
-            float: right;
+            float: left;
+            padding-left: 12px;
             cursor: pointer;
         }
 
