my-material-tab-changes

--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -34,7 +34,7 @@
               </button>
             </div>
             <div class="col-xs-1 p-t-10">
-              <a href="javascript:void(0)" class="width-15-px cursor-pointer" (click)="onDelete(c, sc)">
+              <a href="javascript:void(0)" class="width-15-px cursor-pointer" matTooltip="Delete" (click)="onDelete(c, sc)">
                 <img src="../../../../assets/images/delete-button.png" />
               </a>
             </div>
