--- a/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
+++ b/src/app/shared/dialogs/add-my-material-Bom/add-my-material-bom.component.html
@@ -44,7 +44,7 @@
             <div class="col-xs-2 text-center">
               <span>
                 <mat-form-field class="border-input width-90">
-                  <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="*Quantity" />
+                  <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
                 </mat-form-field>
               </span>
             </div>
