--- a/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
+++ b/src/app/features/bom/bom-myMaterial/bom-myMaterial.component.html
@@ -31,9 +31,9 @@
                 <div class="background-color-bom-sub-category p-0" *ngFor="let subcategory of category.materialList; let sc = index" [formGroupName]="sc">
                   <div class="row p-t-10" *ngIf="!subcategory.isNull">
                     <div class="col-xs-3 text-left">
-                      <span class="limitcharacter-myMaterialName p-l-25">{{ subcategory.materialName }}</span>
+                      <span class="limitcharacter-myMaterialName p-l-25" matTooltip="{{ subcategory.materialName }}">{{ subcategory.materialName }}</span>
                     </div>
-                    <div class="col-xs-3 p-t-10">
+                    <div class="col-xs-3 p-t-10 text-center">
                       <span class="text-semi-bold">
                         <span class="p-r-5">{{ subcategory.tradeName }}</span>
                       </span>
