my-material-tab-changes

--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -83,3 +83,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+div.limited-character.po-p-m {
+  width: 187px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
